adding in workflow for ais script

--- a/oozie/configs/standalone_jobs/standalone.properties
+++ b/oozie/configs/standalone_jobs/standalone.properties
@@ -44,6 +44,12 @@ mmrUploadShellScript=mmr_upload.sh
 uploadFilename=INTS_MMR_INPUT_
 uploadRDirectory=Outbox/MMR/
 
+#ais params
+aisShellScript=run_pentaho.sh
+aisFolder=/mnt/resource/ais/
+pentahoStart=/user/oozie/share/pentaho/ais.kjb
+scriptPath=/user/oozie/share/scripts/
+
 #partition params
 partitionPath=/user/oozie/share/scripts/
 partitionScript=add_partitions.sh
